# suviplusplus

./: README.md  docker-compose.yml  requests.http
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  main.rs  structs.rs
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/: styles.css
frontend/src/lib/: types.ts
frontend/src/lib/components/: BlogComment.svelte  BlogPost.svelte  NavButton.svelte  Suvi.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/blog/: +page.svelte
frontend/src/routes/blog/[id]/: +page.svelte
