[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.6", features = ["full"] }

[dependencies.mongodb]
version = "3.3.0"